kubernetes/archive/prometheus/alertmanager-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-kfirs-com-http
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`alertmanager.kfirs.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: prometheus-alertmanager
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-kfirs-com-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`alertmanager.kfirs.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-alertmanager
          port: 80
  tls:
    secretName: alertmanager-kfirs-com-tls
